# lvisweb-ediparser

./: .gitignore  Cargo.toml  README.md
example/: config.example.toml  discount.example.txt
src/: config.rs  db.rs  download.rs  files.rs  main.rs  search.rs  unzip.rs  upload.rs  utils.rs
src/edi/: discounts.rs  header.rs  mod.rs  prices.rs  products.rs
