[package]
name = "lvisweb-ediparser"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
serde = { version = "1.0.188", features = ["derive"] }
chrono = "0.4.30"
serde_json = "1.0.105"
toml = "0.8.13"
ureq = "2.7.1"
zip = "1.3.0"
log = "0.4.20"
env_logger = "0.11.3"
rusqlite = { version = "0.31.0", features = ["modern-full", "bundled"] }
rand = "0.8.5"
encoding-next = "0.3.0"
